fix up spacing issues

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,6 @@
 .contact-header {
     margin-left: 20px;
+    margin-bottom: 5px;
 }
 
 .contact-methods {
